# odcctools

./: .gitignore  ChangeLog.odcctools  Makefile  README  cctools-528.5.tar.bz2  cctools-576.tar.bz2  cctools-590.12.tar.bz2  cctools-590.18.tar.bz2  cctools-590.23.2.tar.bz2  cctools-590.36.tar.bz2  cctools-590.42.1.tar.bz2  cctools-590.tar.bz2  cctools-622.3.tar.bz2  extract.sh  ld64-26.0.81.tar.bz2  ld64-47.2.tar.bz2  ld64-59.2.tar.bz2
files/: Makefile.in  configure.ac
files/ar/: Makefile.in
files/as/: Makefile.arch.in  Makefile.in
files/as/i386/: Makefile.in
files/as/ppc/: Makefile.in
files/as/ppc64/: Makefile.in
files/include/: Makefile.in
files/include/foreign/: ar.h  libc.h
files/include/foreign/architecture/: byte_order.h
files/include/foreign/mach/: mach_init.h
files/include/foreign/mach/i386/: thread_status.h
files/ld/: Makefile.in  apple_version.c
files/ld64/: Makefile.in
files/libmacho/: Makefile.in
files/libstuff/: Makefile.in  apple_version.c  emulated.c
files/man/: Makefile.in
files/misc/: Makefile.in  redo_prebinding.nomalloc.diff
files/otool/: Makefile.in
patches/: ld-Bstatic.diff  ld-sysroot.diff  private_extern.diff
patches/ar/: ar-printf.diff  ar-ranlibpath.diff  ar_S.diff  archive.diff  contents.diff  errno.diff
patches/as/: bignum.diff  driver.c  getc_unlocked.diff  input-scrub.diff  messages.diff  relax.diff  use_PRI_macros.diff  write_object.nounlink.diff
patches/include/architecture/i386/: selguard.diff
patches/include/mach/: machine.diff  machine_armv7.diff
patches/include/mach-o/: arch.diff
patches/include/stuff/: bytesex-floatstate.diff
patches/ld/: ld-indirect-symbols.diff  ld-pb.diff  relocate-ld64.diff  uuid-nonsmodule.diff
patches/ld64/: MachOReaderRelocatable-ctz.diff  Options-ctype.diff  Options-defcross.diff  Options-dotdot.diff  Options-stdarg.diff  ld64-case-variables.diff
patches/ld64/Writers/: ExecutableFileMachO-class.diff
patches/libstuff/: sys_types.diff
patches/misc/: libtool-ldpath.diff  libtool-pb.diff  libtool-relocate-ld64.diff  libtool_lipo_transform.diff  ranlibname.diff  redo_prebinding.nogetattrlist.diff  redo_prebinding.nomalloc.diff
patches/otool/: nolibmstub.diff  noobjc.diff
